# los-transformers-de-la-city

./: .gitignore  CMakeLists.txt  README.md
include/los-transformers-de-la-city/data_preparation/: data_preparation.h
include/los-transformers-de-la-city/layers/: dense_layer.h  layer.h
include/los-transformers-de-la-city/math/: linalg.h
include/los-transformers-de-la-city/models/: model.h
src/: main.cpp
src/layers/: dense.cpp  dense_layer.cpp  layer.cpp
src/models/: model.cpp
